# partsim

./: .gitignore  .gitmodules  CMakeLists.txt  compile_flags.txt  makefile
cmake/: shader.cmake
include/: buffer.hpp  constants.hpp  context.hpp  glfw.hpp  glfwsetup.hpp  globals.hpp  gui.hpp  queues.hpp  renderer.hpp  resource.hpp  sim.hpp  ubo.hpp  validation.hpp  vertex.hpp  vk.hpp  vkformat.hpp  vksetup.hpp  win_setup.hpp
include/glad/: glad.h
include/util/: constmath.hpp  glm_format.hpp  scope_guard.hpp  vkassert.hpp  zip.hpp
shaders/: compute.comp  shader.vert
src/: assets.c  glad.c  glfw.cpp  glfwsetup.cpp  globals.cpp  gui.cpp  main.cpp  surface_setup.cpp  vkformat.cpp  vksetup.cpp
src/partsim/: sim.cpp
src/setup/: glfwsetup.cpp  renderer.cpp  shaders.cpp  vksetup.cpp  win_setup.cpp
